force-app/main/default/objects/Activity/fields/Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Time__c</fullName>
    <formula>VALUE(

TRIM(
MID(TEXT(CreatedDate), 12, 2))

)-4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>