force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>This is populated via wfr because std type field is not available on custom report types</description>
    <label>Activity Type (reporting)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>