force-app/main/default/objects/Activity/fields/Call_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Minutes__c</fullName>
    <formula>CallDurationInSeconds /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>