force-app/main/default/objects/Activity/fields/Cost_ActivityType__c.field-meta.xml
<CustomField>
    <fullName>Cost_ActivityType__c</fullName>
    <description>This field is used to run reports and formulas for Activity Type since current Salesforce reporting doesn&#39;t allow it.  This field is updated via a workflow</description>
    <label>Cost ActivityType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>