force-app/main/default/objects/Activity/fields/Data_Loader_Update__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</description>
    <inlineHelpText>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</inlineHelpText>
    <label>Data Loader Update</label>
    <type>Checkbox</type>
</CustomField>