force-app/main/default/objects/Activity/fields/Event_Type_Family__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Family__c</fullName>
    <formula>CASE(Copy_of_Activity_Type__c, 
&quot;Demo&quot;,&quot;Demo/Presentation&quot;,
&quot;Face-to-Face&quot;,&quot;Meeting&quot;,
&quot;Follow up Email/Letter&quot;,&quot;Email&quot;,
&quot;Phone Call with Decision Maker&quot;,&quot;Phone Call&quot;,
&quot;Phone Call with Non Decision Maker&quot;,&quot;Phone Call&quot;,
&quot;Proposal&quot;,&quot;Proposal&quot;,
&quot;Quarterly Review&quot;,&quot;Quarterly Review&quot;,
&quot;Sales Presentation&quot;,&quot;Demo/Presentation&quot;,
&quot;Web Meeting&quot;,&quot;Meeting&quot;,&quot;UNDEFINED&quot;,
&quot;Outbound Call&quot;,&quot;Outbound Call&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Type Family</label>
    <type>Text</type>
</CustomField>