force-app/main/default/objects/Activity/fields/LID__Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>LID__Date_Sent__c</fullName>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>