force-app/main/default/objects/Activity/fields/Meeting_Subject__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Subject__c</fullName>
    <inlineHelpText>Enter meeting subject here</inlineHelpText>
    <label>Meeting Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>