force-app/main/default/objects/Activity/fields/of_Activities__c.field-meta.xml
<CustomField>
    <fullName>of_Activities__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>