force-app/main/default/objects/Activity/fields/Owner_s_Channel__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Channel__c</fullName>
    <formula>TEXT (Owner:User.Channel__c)</formula>
    <label>Owner&apos;s Channel</label>
    <type>Text</type>
</CustomField>