force-app/main/default/objects/Activity/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName +&quot; &quot;+ Owner:User.Manager.LastName</formula>
    <label>Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>