force-app/main/default/objects/Activity/fields/Owner_s_Mngt_Level_Report__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Mngt_Level_Report__c</fullName>
    <formula>Owner:User.Location__c</formula>
    <label>Owner&apos;s Mngt Level Report</label>
    <type>Text</type>
</CustomField>