force-app/main/default/objects/Activity/fields/Owner_s_RVP__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_RVP__c</fullName>
    <formula>Owner:User.RVP__r.FirstName + &quot; &quot; + Owner:User.RVP__r.LastName</formula>
    <label>Owner&apos;s RVP</label>
    <type>Text</type>
</CustomField>