force-app/main/default/objects/Activity/fields/RT_Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Activity_Id__c</fullName>
    <externalId>true</externalId>
    <label>RT Activity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>