force-app/main/default/objects/Activity/fields/SalesLoft_Clicked_Count__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Clicked_Count__c</fullName>
    <label>SalesLoft Clicked Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>