force-app/main/default/objects/Activity/fields/SalesLoft_Email_Template_Title__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Email_Template_Title__c</fullName>
    <label>SalesLoft Email Template Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>