force-app/main/default/objects/Activity/fields/SalesLoft_Step_Day_new__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Step_Day_new__c</fullName>
    <label>SalesLoft Step Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>