force-app/main/default/objects/Activity/fields/SalesLoft_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Step_Type__c</fullName>
    <label>SalesLoft Step Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>