force-app/main/default/objects/Activity/fields/SalesLoftReplyCount__c.field-meta.xml
<CustomField>
    <fullName>SalesLoftReplyCount__c</fullName>
    <label>SalesLoft Reply Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>