force-app/main/default/objects/Activity/fields/totangotasks__Totango_activity_external_id__c.field-meta.xml
<CustomField>
    <fullName>totangotasks__Totango_activity_external_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used for syncing Totango tasks and touchpoints using Totango activity external ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is used for syncing Totango tasks and touchpoints using Totango activity external ID.</inlineHelpText>
    <label>Totango activity external ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>