force-app/main/default/objects/Activity/fields/totangotasks__Totango_activity_Link__c.field-meta.xml
<CustomField>
    <fullName>totangotasks__Totango_activity_Link__c</fullName>
    <description>Totango account profile link</description>
    <inlineHelpText>Totango account profile link</inlineHelpText>
    <label>Totango account profile link</label>
    <type>Url</type>
</CustomField>