force-app/main/default/objects/Activity/fields/Unique_View_Count__c.field-meta.xml
<CustomField>
    <fullName>Unique_View_Count__c</fullName>
    <formula>IF (SalesLoft_Viewed_Count__c &gt; 0, 1,NULL)</formula>
    <label>Unique View Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>