force-app/main/default/objects/Activity/listViews/EVENT_TEAM_MY_OPEN_TASKS.listView-meta.xml
<ListView>
    <fullName>EVENT_TEAM_MY_OPEN_TASKS</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>smann</value>
    </filters>
    <label>EVENT TEAM : MY OPEN TASKS</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>