force-app/main/default/objects/Activity/listViews/EVENT_TEAM_MY_TEAMS_TASKS.listView-meta.xml
<ListView>
    <fullName>EVENT_TEAM_MY_TEAMS_TASKS</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>cfarr,rroyc,SKoll,efros,bgalv,emoro,hwilk,do’le,bsaff,bpail,lkemp,aabou,sroch</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>ching,ekell</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>smann</value>
    </filters>
    <label>EVENT TEAM : MY TEAMS TASKS</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>