force-app/main/default/objects/Activity/listViews/EVENT_TEAM_TASK_COMPLETED_THIS_MONTH.listView-meta.xml
<ListView>
    <fullName>EVENT_TEAM_TASK_COMPLETED_THIS_MONTH</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>EVENT TEAM : TASK COMPLETED THIS MONTH</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>