force-app/main/default/objects/Activity/listViews/My_Activities_View.listView-meta.xml
<ListView>
    <fullName>My_Activities_View</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>Event_Status__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Activities</label>
    <language>en_US</language>
</ListView>