force-app/main/default/objects/Activity/listViews/My_Open_Events_THIS_WEEK.listView-meta.xml
<ListView>
    <fullName>My_Open_Events_THIS_WEEK</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.TYPE</columns>
    <columns>ACTIVITY.TASK</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Events THIS WEEK</label>
    <language>en_US</language>
</ListView>