force-app/main/default/objects/Activity/listViews/My_Overdue_Activities.listView-meta.xml
<ListView>
    <fullName>My_Overdue_Activities</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.TYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>0121B000001q5XS</value>
    </filters>
    <label>xxMy Overdue Activities</label>
</ListView>