force-app/main/default/objects/Activity/listViews/MyCompletedActivities.listView-meta.xml
<ListView>
    <fullName>MyCompletedActivities</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Completed Activities</label>
    <language>en_US</language>
</ListView>